force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Posting_Status__c.field-meta.xml
<CustomField>
    <fullName>HOC__Posting_Status__c</fullName>
    <description>Dependent on the Status field.</description>
    <label>Posting Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>