force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Primary_Language__c.field-meta.xml
<CustomField>
    <fullName>HOC__Primary_Language__c</fullName>
    <defaultValue>$Setup.HOC__App_Settings__c.HOC__Language__c</defaultValue>
    <description>Specify the base language for this Opportunity.</description>
    <inlineHelpText>Specify the base language for this Opportunity.</inlineHelpText>
    <label>Primary Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HOC__Available_Languages</valueSetName>
    </valueSet>
</CustomField>