force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Program_Area_Local__c.field-meta.xml
<CustomField>
    <fullName>HOC__Program_Area_Local__c</fullName>
    <label>Program Area (Local)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calendar</fullName>
                <default>true</default>
                <label>Calendar</label>
            </value>
            <value>
                <fullName>Citizen Academy</fullName>
            </value>
            <value>
                <fullName>Corps</fullName>
            </value>
            <value>
                <fullName>DART</fullName>
            </value>
            <value>
                <fullName>EITC</fullName>
            </value>
            <value>
                <fullName>Hands at Work</fullName>
            </value>
            <value>
                <fullName>Grapevine</fullName>
            </value>
            <value>
                <fullName>Skills Bank</fullName>
            </value>
            <value>
                <fullName>ServiceWorks</fullName>
            </value>
            <value>
                <fullName>TeamWorks</fullName>
            </value>
            <value>
                <fullName>Youth &amp; Family</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>