force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Registration_Deadline__c.field-meta.xml
<CustomField>
    <fullName>HOC__Registration_Deadline__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>The number of hours prior to the start time of the project to cut-off volunteer sign-up. (input a number) 
This number becomes the default value for all occurrences and can be changed at the occurrence level.</inlineHelpText>
    <label>Registration cutoff (hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>