force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HOC__Registration_Start_Date__c</fullName>
    <inlineHelpText>By default, volunteers can sign up for an occurrence as soon as it is put in active status. If you wish to have the opportunity appear, and yet not be available yet for sign-up, set a &quot;registration start date.”</inlineHelpText>
    <label>Registration Start Date</label>
    <type>Date</type>
</CustomField>