force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>HOC__Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HOC__Schedule_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Sign Up</fullName>
            </value>
            <value>
                <fullName>Express Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>