force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Requires_Invitation_From__c.field-meta.xml
<CustomField>
    <fullName>HOC__Requires_Invitation_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requires Invitation From</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Volunteer Opportunities (Requires Invitation From)</relationshipLabel>
    <relationshipName>Volunteer_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>