force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__RSVP_Seniors__c.field-meta.xml
<CustomField>
    <fullName>HOC__RSVP_Seniors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSVP/Seniors</label>
    <type>Checkbox</type>
</CustomField>