force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>HOC__Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Date &amp; Time Specific</fullName>
            </value>
            <value>
                <fullName>Individually Scheduled</fullName>
            </value>
            <value>
                <fullName>To Be Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>