force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>HOC__Serial_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Serial Number</label>
    <type>AutoNumber</type>
</CustomField>