force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Site3_0_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>HOC__Site3_0_CreatedBy__c</fullName>
    <description>The id of the Contact who creates this record.</description>
    <inlineHelpText>The id of the Contact who creates this record.</inlineHelpText>
    <label>Site3.0 CreatedBy</label>
    <length>200</length>
    <type>Text</type>
</CustomField>