force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Site3_0_ModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>HOC__Site3_0_ModifiedBy__c</fullName>
    <description>The id of the Contact who modifies this record.</description>
    <inlineHelpText>The id of the Contact who modifies this record.</inlineHelpText>
    <label>Site3.0 ModifiedBy</label>
    <length>200</length>
    <type>Text</type>
</CustomField>