force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Skill_Category__c.field-meta.xml
<CustomField>
    <fullName>HOC__Skill_Category__c</fullName>
    <label>Skill Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Animal Services</fullName>
            </value>
            <value>
                <fullName>Art, Culture, Recreations &amp; Sports</fullName>
            </value>
            <value>
                <fullName>Board/Committee</fullName>
            </value>
            <value>
                <fullName>Business: Accounting &amp; Finances</fullName>
            </value>
            <value>
                <fullName>Business: Administration and Clerical</fullName>
            </value>
            <value>
                <fullName>Business: Business Development/Sales</fullName>
            </value>
            <value>
                <fullName>Business: Communication/PR</fullName>
            </value>
            <value>
                <fullName>Business: HR/Knowledge Management/Legal</fullName>
            </value>
            <value>
                <fullName>Business: Marketing &amp; Special Events</fullName>
            </value>
            <value>
                <fullName>Business: Strategy &amp; Business Plans</fullName>
            </value>
            <value>
                <fullName>Business: Technology</fullName>
            </value>
            <value>
                <fullName>Call Center/Substance Abuse/Therapy</fullName>
            </value>
            <value>
                <fullName>Civic Partnership/Advocacy/Legal Service</fullName>
            </value>
            <value>
                <fullName>Construction/Facilities Management</fullName>
            </value>
            <value>
                <fullName>Disaster/Emergency/Health Services</fullName>
            </value>
            <value>
                <fullName>Education &amp; Children Support</fullName>
            </value>
            <value>
                <fullName>Environment &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>Family Services &amp; Counseling/Translation</fullName>
            </value>
            <value>
                <fullName>Shelter/FoodBank/Special Event Support</fullName>
            </value>
            <value>
                <fullName>Transportation/Logistics/Supply Chain</fullName>
            </value>
            <value>
                <fullName>Volunteering Management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>