force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Skilled_Volunteer_Required__c.field-meta.xml
<CustomField>
    <fullName>HOC__Skilled_Volunteer_Required__c</fullName>
    <label>Skilled Volunteer Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>