force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>HOC__Special_Requirements__c</fullName>
    <label>Special Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>