force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>HOC__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>