force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>HOC__Start_Date_Time__c</fullName>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>