force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__State_Province__c.field-meta.xml
<CustomField>
    <fullName>HOC__State_Province__c</fullName>
    <formula>HOC__Default_Location__r.HOC__State_Province__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State/Province</label>
    <type>Text</type>
</CustomField>