force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Status__c.field-meta.xml
<CustomField>
    <fullName>HOC__Status__c</fullName>
    <inlineHelpText>Active - visible on website 
Pending - not yet visible publicly 
Awaiting Approval - submitted for approval by partner 
Admin - opportunities managed internally, not for public view 
Inactive – formally active, now retired from use on public site</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <color>#E27001</color>
                <label>Active</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <color>#78C953</color>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
                <color>#0B6FCE</color>
                <label>Admin</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <color>#A845DC</color>
                <label>Inactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>