force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Street__c.field-meta.xml
<CustomField>
    <fullName>HOC__Street__c</fullName>
    <formula>HOC__Default_Location__r.HOC__Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>