force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Suitable_for_Groups__c.field-meta.xml
<CustomField>
    <fullName>HOC__Suitable_for_Groups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suitable for Groups</label>
    <type>Checkbox</type>
</CustomField>