force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Targeted_Volunteer_Recruitment__c.field-meta.xml
<CustomField>
    <fullName>HOC__Targeted_Volunteer_Recruitment__c</fullName>
    <label>Target Volunteer Groups</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Harnessing skills of Baby Boomers</fullName>
            </value>
            <value>
                <fullName>Mobilizing Families and Youth</fullName>
            </value>
            <value>
                <fullName>Tapping Expertise of Skills-Based Volunteers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>