force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Total_Attended__c.field-meta.xml
<CustomField>
    <fullName>HOC__Total_Attended__c</fullName>
    <formula>HOC__Guest_Volunteers_Attended__c + HOC__Volunteers_Attended__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>