force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Total_Connections__c.field-meta.xml
<CustomField>
    <fullName>HOC__Total_Connections__c</fullName>
    <label>Total Connections</label>
    <summaryForeignKey>HOC__Connection__c.HOC__Volunteer_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>