force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Total_Declined__c.field-meta.xml
<CustomField>
    <fullName>HOC__Total_Declined__c</fullName>
    <label>Total Declined</label>
    <summarizedField>HOC__Connection__c.HOC__Total_Volunteers__c</summarizedField>
    <summaryFilterItems>
        <field>HOC__Connection__c.HOC__Status__c</field>
        <operation>equals</operation>
        <value>Declined</value>
    </summaryFilterItems>
    <summaryForeignKey>HOC__Connection__c.HOC__Volunteer_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>