force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Total_Hours_Served__c.field-meta.xml
<CustomField>
    <fullName>HOC__Total_Hours_Served__c</fullName>
    <formula>HOC__Guest_Volunteer_Hours_Served__c + HOC__Volunteer_Hours_Served__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Total Hours Served</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>