force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Total_Number_Hours_Served__c.field-meta.xml
<CustomField>
    <fullName>HOC__Total_Number_Hours_Served__c</fullName>
    <formula>HOC__Guest_Volunteer_Number_Hours_Served__c  +  HOC__Volunteer_Number_Hours_Served__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Served</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>