force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Total_Occurrences__c.field-meta.xml
<CustomField>
    <fullName>HOC__Total_Occurrences__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Occurrences</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>