force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Training_Type__c.field-meta.xml
<CustomField>
    <fullName>HOC__Training_Type__c</fullName>
    <label>Training Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>HOC__Activity_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer Leadership</fullName>
            </value>
            <value>
                <fullName>Volunteer Management</fullName>
            </value>
            <value>
                <fullName>Organizational Development</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>