force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Turn_off_teams__c.field-meta.xml
<CustomField>
    <fullName>HOC__Turn_off_teams__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if volunteer teams can be added to a volunteer opportunity and all related occurrences.</description>
    <inlineHelpText>When checked all the occurrences associated with this volunteer opportunity will not allow volunteer teams register.</inlineHelpText>
    <label>Turn off Teams</label>
    <type>Checkbox</type>
</CustomField>