force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Turn_off_waitlist__c.field-meta.xml
<CustomField>
    <fullName>HOC__Turn_off_waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if volunteers can be added to the waitlist for a volunteer opportunity and all related occurrences.</description>
    <inlineHelpText>When checked all the occurrences associated with this volunteer opportunity will not allow volunteers to be added to the waitlist.</inlineHelpText>
    <label>Turn off Waitlist</label>
    <type>Checkbox</type>
</CustomField>