force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Type__c.field-meta.xml
<CustomField>
    <fullName>HOC__Type__c</fullName>
    <inlineHelpText>Project - a volunteer opportunity that will result in service hours 
Activity - any other opportunity you wish to put on calendar, Activities will be further defined by the type of activity</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>