force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Used_as_Prerequisite__c.field-meta.xml
<CustomField>
    <fullName>HOC__Used_as_Prerequisite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate that the volunteer opportunity is used as a prerequisite for one or more volunteer opportunities</description>
    <inlineHelpText>When checked this volunteer opportunity serves as the prerequisite for other volunteer opportunities</inlineHelpText>
    <label>Used as Prerequisite</label>
    <type>Checkbox</type>
</CustomField>