force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Volunteer_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>HOC__Volunteer_Activity_Type__c</fullName>
    <label>Volunteer Activity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative Support/Clerical</fullName>
            </value>
            <value>
                <fullName>Building/Construction</fullName>
            </value>
            <value>
                <fullName>Caring for Animals</fullName>
            </value>
            <value>
                <fullName>Caring for People</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Collecting, Sorting &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Consulting &amp; Professional Services</fullName>
            </value>
            <value>
                <fullName>Counseling</fullName>
            </value>
            <value>
                <fullName>Disaster Services</fullName>
            </value>
            <value>
                <fullName>Event Organizing</fullName>
            </value>
            <value>
                <fullName>Food Preparation &amp; Meal Services</fullName>
            </value>
            <value>
                <fullName>Fundraising &amp; Campaigning</fullName>
            </value>
            <value>
                <fullName>Gardening/Planting</fullName>
            </value>
            <value>
                <fullName>Hotline/Information Center Support</fullName>
            </value>
            <value>
                <fullName>Mentoring/Youth Development</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Public Relations/Marketing</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Recreation</fullName>
            </value>
            <value>
                <fullName>Tutoring</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>