force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Volunteer_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>HOC__Volunteer_Coordinator_Email__c</fullName>
    <label>Opportunity Coordinator Email</label>
    <type>Email</type>
</CustomField>