force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Volunteer_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>HOC__Volunteer_Coordinator_Name__c</fullName>
    <label>Opportunity Coordinator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>