force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Volunteer_Event__c.field-meta.xml
<CustomField>
    <fullName>HOC__Volunteer_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Event</label>
    <referenceTo>HOC__Volunteer_Event__c</referenceTo>
    <relationshipLabel>Volunteer Opportunities</relationshipLabel>
    <relationshipName>Volunteer_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>