force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Volunteer_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>HOC__Volunteer_Event_Name__c</fullName>
    <formula>HOC__Volunteer_Event__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Event Name</label>
    <type>Text</type>
</CustomField>