force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Volunteer_Event_URL__c.field-meta.xml
<CustomField>
    <fullName>HOC__Volunteer_Event_URL__c</fullName>
    <label>Volunteer Event URL</label>
    <type>Url</type>
</CustomField>