force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Volunteer_Leader_Approval_Manager__c.field-meta.xml
<CustomField>
    <fullName>HOC__Volunteer_Leader_Approval_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Leader Approval Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Volunteer_Opportunities_Approval_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>