force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Volunteer_Leader_Approval_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>HOC__Volunteer_Leader_Approval_Manager_Email__c</fullName>
    <label>Volunteer Leader Approval Manager Email</label>
    <type>Email</type>
</CustomField>