force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Volunteers_Attended__c.field-meta.xml
<CustomField>
    <fullName>HOC__Volunteers_Attended__c</fullName>
    <label>Volunteers Attended</label>
    <summaryFilterItems>
        <field>HOC__Connection__c.HOC__Attendance_Status__c</field>
        <operation>equals</operation>
        <value>Attended (and Hours Verified)</value>
    </summaryFilterItems>
    <summaryForeignKey>HOC__Connection__c.HOC__Volunteer_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>