force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__VV_Required_level_of_verification__c.field-meta.xml
<CustomField>
    <fullName>HOC__VV_Required_level_of_verification__c</fullName>
    <description>Specify the required level of verification to sign up / express interest.</description>
    <inlineHelpText>Specify the required level of verification to sign up / express interest.</inlineHelpText>
    <label>Min Required Level of Verification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level 1</fullName>
            </value>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>