force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Web_Services_Tag__c.field-meta.xml
<CustomField>
    <fullName>HOC__Web_Services_Tag__c</fullName>
    <label>Web Services Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>