force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/HOC__Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>HOC__Zip_Postal_Code__c</fullName>
    <formula>HOC__Default_Location__r.HOC__Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip/Postal Code</label>
    <type>Text</type>
</CustomField>