force-app/main/default/objects/HOC__Volunteer_Opportunity__c/fields/Impact_Measure__c.field-meta.xml
<CustomField>
    <fullName>Impact_Measure__c</fullName>
    <description>Number associated with impact metric--100 in &quot;meals served: 100&quot;.</description>
    <label>Impact Measure</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>